# logos-private-balance-attestation

./: .gitignore  Cargo.toml  LICENSE  LP-0005.md  README.md  balance-attestation-verifier.idl.json  demo.sh
.github/workflows/: ci.yml
apps/basecamp/: CMakeLists.txt  README.md  flake.nix  metadata.json
apps/basecamp/nix/logos-cpp-sdk-patched/: fix-bstr-event-payload.patch  flake.nix
apps/basecamp/src/: BalanceAttestationBackend.cpp  BalanceAttestationBackend.h  balance_attestation.rep  balance_attestation_interface.h  balance_attestation_plugin.cpp  balance_attestation_plugin.h
apps/basecamp/src/qml/: BalanceAttestation.qml
crates/attestation-cli/: Cargo.toml
crates/attestation-cli/src/: main.rs
crates/attestation-core/: Cargo.toml
crates/attestation-core/src/: bytes.rs  error.rs  hash.rs  lez_commitment.rs  lib.rs  presenter.rs  serde_helpers.rs  types.rs
crates/attestation-messaging/: Cargo.toml
crates/attestation-messaging/src/: lib.rs
crates/attestation-prover/: Cargo.toml
crates/attestation-prover/src/: inspect.rs  lib.rs  prove.rs  witness.rs
crates/attestation-sdk/: Cargo.toml
crates/attestation-sdk/src/: lib.rs
crates/attestation-verifier/: Cargo.toml
crates/attestation-verifier/src/: lib.rs
docs/: ARCHITECTURE.md  BASECAMP_QA.md  BENCHMARKS.md  DEMO_VIDEO_SCRIPT.md  ERROR_CODES.md  EVALUATOR_GUIDE.md  FEEDBACK_LP-0005.md  IDL_DRAFT.md  IMPLEMENTATION_PLAN.md  LOCAL_SETUP.md  LOGOS_DELIVERY.md  MODULAR_TEST_PLAN.md  NEXT_STEPS.md  ONCHAIN_PATH_DECISION.md  PRIZE_CHECKLIST.md  PR_REOPEN_MESSAGE.md  REFERENCE_LP-0016_PR465.md  REFERENCE_NOTES.md  RISK_SPIKES.md  SECURITY_MODEL.md  SUBMISSION_STATUS.md  TESTNET_DEPLOYMENT.md
examples/chat-gate/: Cargo.toml
examples/chat-gate/src/: lib.rs
examples/chat-gate/tests/: chat_e2e.rs
examples/demo-runner/: Cargo.toml
examples/demo-runner/src/: build_demo_fixtures.rs
examples/fee-tier-gate/: Cargo.toml
examples/fee-tier-gate/src/: lib.rs
examples/fee-tier-gate/tests/: fee_tier_e2e.rs
examples/governance-gate/: Cargo.toml
examples/governance-gate/src/: lib.rs
examples/governance-gate/tests/: governance_e2e.rs
idl/: balance-attestation-verifier.idl.json  balance-attestation-verifier.json
lez-verifier/: Cargo.toml
lez-verifier/guest/: Cargo.toml
lez-verifier/program/: Cargo.toml  README.md
lez-verifier/program/examples/: cycle_bench.rs
lez-verifier/program/guest/: Cargo.toml
lez-verifier/program/src/: lib.rs
lez-verifier/program/tests/: program_journal_roundtrip.rs
lez-verifier/src/: lib.rs
lez-verifier/tests/: onchain_e2e.rs
methods/: Cargo.toml  README.md
methods/guest/: Cargo.toml
methods/tests/: journal_roundtrip.rs
scripts/: benchmark-lez-cycles.sh  check-basecamp-package.sh  check-public-clean-room.sh  check-risc0-version.sh  check-wallet-preflight.sh  ci-live-sequencer-e2e.sh  clean-local-artifacts.sh  common-env.sh  demo-clean-room.sh  demo-end-to-end.sh  demo-local-full-e2e.sh  demo-local-gate-e2e.sh  demo-local-messaging.sh  demo-local-sequencer-e2e.sh  env.example  m2-check-lez-commitment-compat.sh  m2-inspect-private-account.sh  migrate-wallet-storage-private-kinds.sh  prepare-basecamp-delivery-pair.sh  prepare-local-private-account.sh  run-basecamp-local.sh  spike-00-build-lez-program.sh  spike-00-inspect-lez-proof-path.sh  spike-00-install-lez-sources.sh  spike-00-run-direct-receipt-gate.sh  spike-01-build-private-gate.sh  spike-01-demo-private-gate.sh  spike-01-install-lez-sources.sh  spike-01-run-private-gate.sh  spike-02-inspect-membership-proof.sh  spike-02-install-lez-sources.sh  spike-03-build-balance-circuit.sh  spike-03-install-lez-sources.sh  spike-03-run-balance-circuit.sh  spike-04-build-binding-circuit.sh  spike-04-install-lez-sources.sh  spike-04-run-binding-circuit.sh  spike-05-run-baseline.sh  spike-05-run-devmode-baseline.sh  spike-05-run-prod-baseline.sh  (+7 more)
spikes/balance-circuit/: README.md
spikes/binding-circuit/: README.md
spikes/membership-proof/: README.md
spikes/private-balance-gate/: README.md
spikes/receipt-verification/: README.md
spikes/spike-08-program-chaining/: README.md
spikes/spike-08-program-chaining/lez/runner/: Cargo.toml
spikes/spike-09-ppe-gate/: README.md
spikes/spike-10-direct-receipt-verifier/: Cargo.toml  README.md
spikes/spike-10-direct-receipt-verifier/guest/: Cargo.toml
