[workspace]
members = [
    "crates/attestation-core",
    "crates/attestation-cli",
    "crates/attestation-prover",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
attestation-core = { path = "crates/attestation-core" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
