[workspace]
members = [
    "crates/attestation-core",
    "crates/attestation-cli",
    "crates/attestation-prover",
    "methods",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
attestation-core = { path = "crates/attestation-core" }
attestation-prover = { path = "crates/attestation-prover" }
methods = { path = "methods" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
risc0-zkvm = { version = "3.0.5", features = ["std"] }
risc0-build = "3.0.5"
