[package]
name = "lez-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
attestation-core.workspace = true
methods.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
risc0-build.workspace = true

[dev-dependencies]
attestation-prover.workspace = true
attestation-verifier.workspace = true
hex.workspace = true
