[package]
name = "methods"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build.workspace = true

[dev-dependencies]
attestation-core.workspace = true
attestation-prover.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
