[package]
name = "attestation-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "balance-attest"
path = "src/main.rs"

[dependencies]
attestation-core.workspace = true
attestation-prover.workspace = true
attestation-verifier.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
