[package]
name = "attestation-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Top-level SDK for the Logos private balance attestation primitive (LP-0005)."

[features]
default = ["off-chain"]
# Off-chain path: build witness, prove, verify locally. Requires no LEZ runtime.
off-chain = []
# On-chain path: Spike-0C-style LEZ gate (recursion outer program). Adds the
# lez-verifier dep and re-exports prove_lez_gate / LezGateProgram.
on-chain = ["dep:lez-verifier"]

[dependencies]
attestation-core.workspace = true
attestation-messaging.workspace = true
attestation-prover.workspace = true
attestation-verifier.workspace = true
lez-verifier = { path = "../../lez-verifier", optional = true }
