[package]
name = "attestation-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
attestation-core.workspace = true
methods.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
attestation-prover.workspace = true
hex.workspace = true
