[package]
name = "chat-gate-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
attestation-core.workspace = true
attestation-verifier.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
attestation-prover.workspace = true
hex.workspace = true
