[workspace]

[package]
name = "lez-verifier-program"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = "3.0.5"

[dev-dependencies]
risc0-zkvm = { version = "3.0.5", features = ["std"] }
nssa_core = { path = "../../logos/nssa/core" }
borsh = "1.5.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
