[workspace]

[package]
name = "spike-10-direct-receipt-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = "3.0.5"

[dependencies]
anyhow = "1"
borsh = "1.5.7"
risc0-zkvm = { version = "3.0.5", features = ["prove"] }
serde_json = "1"

