[workspace]

[package]
name = "lez-verifier-program-guest"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "balance_attestation_program"
path = "src/bin/balance_attestation_program.rs"

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
borsh = { version = "1.5.7", features = ["derive"] }
nssa_core = { path = "../../../logos/nssa/core" }
