[workspace]

[package]
name = "spike-10-direct-receipt-verifier-guest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "toy_statement"
path = "src/bin/toy_statement.rs"

[[bin]]
name = "direct_receipt_verifier"
path = "src/bin/direct_receipt_verifier.rs"

[dependencies]
borsh = "1.5.7"
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }

